# hue_api_explore

./: .gitignore  ADVANCED_USAGE.md  CLAUDE.md  HUE_API_ARCHITECTURE.md  QUICKSTART_EXAMPLES.md  README.md  WIZARD_GUIDE.md  check_fade.py  cli_interface.py  create_sleep_scene.py  debug_scene.py  pyproject.toml  requirements.txt  setup_bridge.py  test_30min.py  test_30min_scene.py  test_durations.py  test_scene_recall_duration.py  todo.md
hue-api-v2-reference/: api-reference.html  cloud2cloud-getting-started.html  core-concepts.html  getting-started.html  index.html  migration-guide.html
hue_controller/: __init__.py  bridge_connector.py  color_utils.py  command_interpreter.py  constants.py  device_manager.py  exceptions.py  models.py
hue_controller/managers/: __init__.py  effects_manager.py  entertainment_manager.py  group_manager.py  scene_manager.py
hue_controller/wizards/: __init__.py  admin_scene_wizard.py  base_wizard.py  entertainment_wizard.py  glossary.py  group_wizard.py  help_system.py  modes.py  navigation.py  scene_wizard.py  validators.py  visual_feedback.py  wizard_ui.py
hue_controller/wizards/presets/: __init__.py  simple_mode.py  standard_mode.py
hue_controller/wizards/scene/: __init__.py  preview.py  quick_wizard.py  router.py  standard_wizard.py
hue_controller/wizards/templates/: __init__.py  scene_templates.py
hue_controller/wizards/ui/: __init__.py  components.py  menus.py
tests/: __init__.py  test_glossary.py  test_visual_feedback.py  test_wizard_modes.py
